--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -57,7 +57,7 @@ First Player to flag Dragon Utopia wins the Scenario.
 At the end of the \nth{12} Round, if the Dragon Utopia is not flagged by any player, all players lose the Scenario.
 
 \begin{center}
-  \includegraphics[width=0.55\linewidth, keepaspectratio]{\art/prayer.png}
+  \transparent{0.4}{\includegraphics[width=0.55\linewidth, keepaspectratio]{\art/prayer.png}}
 \end{center}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -83,7 +83,7 @@ During this Scenario:
 \vspace{3em}
 
 \begin{center}
-  \includegraphics[width=0.9\linewidth, keepaspectratio]{\art/shield.png}
+  \transparent{0.4}{\includegraphics[width=0.9\linewidth, keepaspectratio]{\art/shield.png}}
 \end{center}
 
 \textbf{Players can spend one Arcane Spike during combat to cast:}
