--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -25,7 +25,7 @@ This Scenario plays out over 13 Rounds.
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze\ Dwelling
+  \item \bronze\ Dwelling \textit{or} Mage Guild \textbf{and} 2 \svg{building_materials}
   \item Each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
 
