--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -41,7 +41,6 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
   \item P × Center (VI–VII) Map Tiles
 \end{itemize}
 
-\columnbreak
 \textbf{Additionally, for 4 players:}
 \begin{itemize}
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
@@ -53,10 +52,9 @@ The game ends at the end of the Round when any of the following conditions are m
 \begin{itemize}
  \item \textbf{4 players:} One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
  \item One player has conquered both Dragon Utopias. \textit{That player wins the game immediately.}
- \item At the end of Round 13.
 \end{itemize}
 
-If no player has achieved an immediate victory, the player controlling a Dragon Utopia wins.
+If at the end of Round 13 no player has achieved an immediate victory, the player controlling a Dragon Utopia wins.
 If different players control the two Utopias, they each draw Cards up to their \svg{hand} Limit and engage in a final Combat -- the winner is the victor.
 If no one controls a Dragon Utopia, all players lose.
 \subsection*{\MakeUppercase{Timed Events}}
