--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 14 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Chosen Neutral \bronze\ Unit from the closest starting player's Faction
+  \item 2 × Chosen Neutral \bronze Unit from the closest starting player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:} Citadel
