--- a/draft-scenarios/clash/brothers_in_arms.tex
+++ b/draft-scenarios/clash/brothers_in_arms.tex
@@ -33,7 +33,7 @@ Choose one:
 \begin{itemize}
   \item Search(3) \svg{skill}
   \item Search(3) \svg{spellpower}
-  \item Add a Few \bronze\ Units of the second highest Recruitment cost.
+  \item A Few \bronze\ Units of the second highest Recruitment cost.
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes one random Far (II–III) Map Tile.
