--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -5,6 +5,8 @@
 
 \textbf{Author:} Da
 
+\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1161571991732625468}{Archon Studios Discord}
+
 \textit{The ancient dragons have awoken from their septcentennial slumber, unleashing chaos upon Erathia. Age-old enemies must set aside centuries of conflict to confront the draconic threat, lest they see the continent consumed by fire.}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
@@ -81,7 +83,6 @@ In case of a tie, the tied players draw Cards to their \svg{hand} Limit and enga
     That player suffers -1 \svg{movement} this Round.
   \item Level VII Neutral Combats cannot be skipped.
   \item \textbf{Obelisk:} Roll 1 \svg{resource} or \svg{treasure}.
-  \columnbreak
   \item \textbf{Dragon Utopia:} Draw Cards up to \svg{hand} Limit, gain 10 \svg{gold}, 1 \svg{valuables} and Search (2) \svg{artifact} twice.
   \item When Tiles are removed, reduce any income provided by mines or settlements on that Tile.
   \item Remove ``Astrologers proclaim week of the Magic Tortoise'' from the Astrologers Proclaim Deck.
